[gd_scene load_steps=2 format=3 uid="uid://cqy8j7xvx3kh5"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_hud_script"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud_script")

[node name="HPBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 40.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="XPBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 320.0
offset_bottom = 70.0
max_value = 100.0
show_percentage = false

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 160.0
offset_bottom = 106.0
text = "Wave 1"

[node name="CurrencyDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0

[node name="ScrapLabel" type="Label" parent="CurrencyDisplay"]
layout_mode = 2
text = "Scrap: 0"

[node name="ComponentsLabel" type="Label" parent="CurrencyDisplay"]
layout_mode = 2
text = "Components: 0"

[node name="NanitesLabel" type="Label" parent="CurrencyDisplay"]
layout_mode = 2
text = "Nanites: 0"
